...
                android:layout_width="match_parent"
                android:layout_height="@dimen/video_player_height"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/tv_step_long_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
...
